--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ worktable = { git = "https://github.com/pathscale/WorkTable.git", ref = "a66de55
 rkyv = "0.7.42"
 derive_more = "*"
 eyre = "*"
+ethers = "2.0.14"
+serde = "1.0.215"
+serde_json = "1.0.133"
+tokio = { version = "1.33.0", features = ["full"] }
