--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,12 @@ ethers = "2.0.14"
 serde = "1.0.215"
 serde_json = "1.0.133"
 tokio = { version = "1.33.0", features = ["full"] }
+dashmap = "6.1.0"
+tracing = "0.1.41"
+reqwest = "0.12.9"
+lru = "0.12.5"
+async-trait = "0.1.83"
+web3 = "0.19.0"
+chrono = "0.4.38"
+serde_path_to_error = "0.1.16"
+ethnum = "1.5.0"
