--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ serde_json = "1.0.133"
 tokio = { version = "1.33.0", features = ["full"] }
 dashmap = "6.1.0"
 tracing = "0.1.41"
-reqwest = "0.12.9"
+reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
 lru = "0.12.5"
 async-trait = "0.1.83"
 web3 = "0.19.0"
