--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,6 @@ serde_path_to_error = "0.1.16"
 ethnum = "1.5.0"
 tracing-subscriber = "0.3.19"
 endpoint-libs = {git = "https://github.com/pathscale/endpoint-libs.git", ref = "e864d599370d6f2dee8a55da920671254e98993f"}
+openssl = { version = "*", features = ["vendored"] }
+
 
