--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,7 @@ tracing-subscriber = "0.3.19"
 endpoint-libs = {git = "https://github.com/pathscale/endpoint-libs.git", ref = "e864d599370d6f2dee8a55da920671254e98993f"}
 openssl = { version = "*", features = ["vendored"] }
 sysinfo = "0.33.0"
+alloy-primitives = "0.8.14"
+clap = { version = "4.5.23", features = ["derive"] }
 
 
